# self-pruning-neural-engine

./: .gitignore  DESIGN.md  PROGRESS.md  README.md  pyproject.toml
engine/: __init__.py  activations.py  loss.py  matmul.py  ops.py  reductions.py  tensor.py
evaluation/: __init__.py  cost.py  run_cost_report.py
nn/: __init__.py  activations.py  linear.py  sequential.py
optim/: __init__.py  adam.py  sgd.py
prune/: __init__.py  compress.py  criteria.py  dst.py  mask.py  schedule.py
results/: CLAIM.md  cost_report.csv  cost_report.md  dst_comparison.csv  dst_comparison_raw.csv  pareto_raw.csv  pareto_summary.csv  part2_learning_curve.csv  part3_self_pruning.csv  part4_structured_self_pruning.csv  structured_vs_unstructured.csv  structured_vs_unstructured_raw.csv
tests/: gradcheck_utils.py  test_accumulate_dense_gradients.py  test_activations.py  test_adam.py  test_compress.py  test_cost.py  test_dst.py  test_engine_ops.py  test_linear.py  test_magnitude_pruning.py  test_mask.py  test_masked_adam.py  test_pareto_sweep.py  test_revive.py  test_run_dst_comparison.py  test_run_part2.py  test_run_part3.py  test_run_part4_structured.py  test_run_structured_vs_unstructured.py  test_saliency_pruning.py  test_schedule.py  test_sequential.py  test_sgd.py  test_softmax_ce.py  test_structured_criteria.py  test_structured_masking.py  test_train_loop.py
train/: dataset.py  loop.py  run_dst_comparison.py  run_pareto_sweep.py  run_part2.py  run_part3.py  run_part4_structured.py  run_structured_vs_unstructured.py
utils/: seed.py
